static/ru/api/v1/public-key/index.md
# FastNear API - V1 Поиск по публичному ключу
Найти аккаунты полного доступа по публичному ключу
Получите индексированные ID аккаунтов, связанные с публичным ключом полного доступа.
## Ссылки на источник
- https://docs.fastnear.com/ru/api/v1/public-key
- https://docs.fastnear.com/ru/apis/fastnear/v1/public_key_lookup
- https://docs.fastnear.com/ru/apis/fastnear/openapi/public-key/lookup_by_public_key_v1
## Операция
- Транспорт: http
- Метод: GET
- Путь: `/v1/public_key/{public_key}`
## OpenAPI
- Эта операция: https://docs.fastnear.com/openapi/fastnear/lookup_by_public_key_v1.json (https://docs.fastnear.com/openapi/fastnear/lookup_by_public_key_v1.yaml)
- Полный документ API: https://docs.fastnear.com/openapi/fastnear.json
- Указатель в полном документе: https://docs.fastnear.com/openapi/fastnear.json#/paths/~1v1~1public_key~1%7Bpublic_key%7D/get
## Сети
- Mainnet: https://api.fastnear.com/
- Testnet: https://test.api.fastnear.com/
## Авторизация
- Bearer-токен через заголовок `Authorization: Bearer <token>`
- API-ключ через query `apiKey`: API-ключ FastNEAR в параметре запроса `apiKey`. Удобно для curl и клиентов, которые не могут задавать заголовки, но ключ может попасть в URL, логи и историю команд оболочки.
- Этот экспорт намеренно не включает локально сохранённые учётные данные
## Текущий запрос
- Сеть: Mainnet
- Метод: GET
- URL: https://api.fastnear.com/v1/public_key/ed25519%3ACCaThr3uokqnUs6Z5vVnaDcJdrfuTpYJHJWcAGubDjT
- Активный пример: Mainnet
## Справка по запросу
### Активный пример
```json
{
  "body": null,
  "headers": {},
  "path": {
    "public_key": "ed25519:CCaThr3uokqnUs6Z5vVnaDcJdrfuTpYJHJWcAGubDjT"
  },
  "query": {}
}
```
### Входные данные
- `public_key` (путь, обязательный, string): Публичный ключ NEAR в формате `ed25519:...` или `secp256k1:...`.
### Параметры пути

- `public_key` (путь, обязательный, string): Публичный ключ NEAR в формате `ed25519:...` или `secp256k1:...`.

## Справка по ответу
- Статус: 200
- Тип данных: application/json
- Краткое описание: Подходящие ID аккаунтов для переданного публичного ключа полного доступа
### Схема ответа
```json
{
  "type": "object",
  "required": [
    "public_key",
    "account_ids"
  ],
  "additionalProperties": false,
  "properties": [
    {
      "name": "account_ids",
      "required": true,
      "schema": {
        "type": "array",
        "items": {
          "type": "string"
        }
      }
    },
    {
      "name": "public_key",
      "required": true,
      "schema": {
        "type": "string"
      }
    }
  ],
  "refName": "PublicKeyLookupResponse"
}
```
---
## О FastNear

- FastNear обрабатывает более 10 млрд запросов в месяц.
- FastNear управляет более чем 100 нодами по всему миру.
- Один API-ключ FastNear работает и для RPC, и для индексированных API.
- Получите API-ключ на [dashboard.fastnear.com](https://dashboard.fastnear.com).
